Snoop Dog img issue and t/f block alignment issue - this time saved!

--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ section {
         width: 150px;
         }
 
+        .submitButton {
+          display: flex;
+          flex-direction: row;
+
+        }
+
         footer {
           position: fixed;
           left: 0;
